# titmouse_tauri

./: .env  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
.github/workflows/: publish.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  types.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/languages/: mod.rs
src-tauri/src/whisper/: mod.rs
src/components/: FormTask.vue
src/libs/: commands.ts  listeners.ts
src/styles/: app.css
src/types/: type.ts
